[tool.poetry]
name = "sqlitekvstore"
version = "0.2.1"
description = "Simple key-value store backed by sqlite"
authors = ["Rhet Turnbull <rturnbull+git@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mypy = "^0.9.1"
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
