[build-system]
requires = ["flit_core >=3.2,<4", "poetry-core>=1.0.0"]
build-backend = "flit_core.buildapi"

[project]
name = "sqlitekvstore"
authors = [{name = "Rhet Turnbull", email = "rturnbull+git@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/RhetTbull/sqlitekvstore"

[tool.poetry]
name = "sqlitekvstore"
version = "0.3.0"
description = "Simple key-value store backed by sqlite"
authors = ["Rhet Turnbull <rturnbull+git@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mypy = "^0.9.1"
black = "^22.6.0"
flake8 = "^5.0.4"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
flit = "^3.8.0"