[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlitekvstore"
version = "0.3.0"
description = "Simple key-value store backed by sqlite"
authors = [{name = "Rhet Turnbull", email = "rturnbull+git@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Home = "https://github.com/RhetTbull/sqlitekvstore"

[dependency-groups]
dev = [
    "bump2version",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["test_sqlitekvstore.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
